<resources>
    <string name="app_name">Careapy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_register_client">RegisterActivityClient</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_3" />
    <string name="tab_text_4">Tab 4</string>
    <string name="tab_text_5" />
    <string name="title_activity_register_counsellor">RegisterActivityCounsellor</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create A New Account</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="log_in">Log in</string>
    <string name="select_language">Select Language</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="next">Next</string>
    <string name="what_led_you_to_consider_counselling_today">What led you to consider counselling today?</string>
    <string name="addiction">Addiction</string>
    <string name="anxiety">Anxiety</string>
    <string name="anger_management">Anger Management</string>
    <string name="career_difficulties">Career Difficulties</string>
    <string name="depression">Depression</string>
    <string name="eating_disorders">Eating Disorders</string>
    <string name="family_conflict">Family Conflict</string>
    <string name="grief_and_loss">Grief and Loss</string>
    <string name="lgbtq_related_issues">LGBTQ-Related issues</string>
    <string name="mental_illness">Mental illness</string>
    <string name="parenting_issues">Parenting Issues</string>
    <string name="relationship_issues">Relationship issues</string>
    <string name="self_esteem_issues">Self esteem issues</string>
    <string name="sleeping_disorders">Sleeping disorders</string>
    <string name="stress">Stress</string>
    <string name="trauma_and_abuse">Trauma and abuse</string>
    <string name="select_the_problems_you_specialise_in">Select the problems you specialise in</string>
    <string name="message">Message</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="chats">Chats</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="backup_pin">Backup Pin</string>
    <string name="log_out">Log Out</string>
    <string name="what_problems_do_you_specialise_in">What problems do you specialise in?</string>
    <string name="welcome_to_careapy">Welcome to Careapy!</string>
    <string name="welcome_to_careapy_">Welcome to Careapy</string>
    <string name="your_assigned_counsellor_is">Your assigned counsellor is:</string>
    <string name="your_backup_pin_is">Your Backup Pin is:</string>
    <string name="store_your_backup_pin_in_a_safe_place_in_order_to_recover_your_account">Store your Backup Pin in a safe place in order to recover your account</string>
    <string name="note_please_ensure_you_treat_your_counsellor_with_respect_all_information_will_be_treated_as_confidential_at_all_times_any_violation_of_our_rules_will_result_in_a_permanent_ban_of_your_account">Note: Please ensure you treat your counsellor with respect. All information will be treated as confidential at all times. Any violation of our rules will result in a permanent ban of your account.</string>
</resources>