<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.WelcomeClient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/banner"
            android:layout_marginTop="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/welcome_to_careapy"
            android:textColor="@color/primary"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/your_assigned_counsellor_is"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/_20sdp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toTopOf="parent"
                app:riv_oval="true"/>
            <TextView
                android:id="@+id/welcomeIcon"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_40sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/counsellorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/your_backup_pin_is"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/backUpPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/store_your_backup_pin_in_a_safe_place_in_order_to_recover_your_account"
            android:textAlignment="center"
            android:textColor="@color/Blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/note_please_ensure_you_treat_your_counsellor_with_respect_all_information_will_be_treated_as_confidential_at_all_times_any_violation_of_our_rules_will_result_in_a_permanent_ban_of_your_account"
            android:textAlignment="center"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_11ssp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnLoad"
            android:text="Continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="LoadPage"
            />
    </LinearLayout>

</ScrollView>